--- a/ITunesPractice/PlayListPlayer.storyboard
+++ b/ITunesPractice/PlayListPlayer.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -39,12 +39,63 @@
                                 </subviews>
                                 <color key="backgroundColor" name="red_1"/>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tje-Lv-4Yd">
+                                <rect key="frame" x="20" y="255" width="350" height="90"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kMF-G2-Ezs">
+                                        <rect key="frame" x="-2" y="0.0" width="354" height="21.333333333333332"/>
+                                    </slider>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="FZX-VP-viy">
+                                        <rect key="frame" x="45.666666666666686" y="40.333333333333314" width="258.99999999999994" height="49.666666666666657"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B5S-k5-POz">
+                                                <rect key="frame" x="0.0" y="0.0" width="49.666666666666664" height="49.666666666666664"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="B5S-k5-POz" secondAttribute="height" multiplier="1:1" id="vjW-j5-Iwv"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="quote.bubble" catalog="system">
+                                                    <backgroundConfiguration key="background">
+                                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                                    </backgroundConfiguration>
+                                                </buttonConfiguration>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P8C-4j-1HE">
+                                                <rect key="frame" x="104.66666666666667" y="0.0" width="49.666666666666671" height="49.666666666666664"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="airplayaudio.circle" catalog="system">
+                                                    <backgroundConfiguration key="background">
+                                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                    </backgroundConfiguration>
+                                                </buttonConfiguration>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWK-FY-nTa">
+                                                <rect key="frame" x="209.33333333333331" y="0.0" width="49.666666666666686" height="49.666666666666664"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="airplayaudio.circle" catalog="system">
+                                                    <backgroundConfiguration key="background">
+                                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                    </backgroundConfiguration>
+                                                </buttonConfiguration>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="gmY-Le-RTY"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cWL-1v-Gje"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="sMN-jI-QZr" firstAttribute="centerY" secondItem="cWL-1v-Gje" secondAttribute="centerY" id="1xK-P9-9fq"/>
                             <constraint firstItem="sMN-jI-QZr" firstAttribute="width" secondItem="b5X-Ct-Tci" secondAttribute="width" multiplier="0.9" id="8on-x4-p23"/>
+                            <constraint firstItem="cWL-1v-Gje" firstAttribute="trailing" secondItem="tje-Lv-4Yd" secondAttribute="trailing" constant="20" id="ElT-Kd-9SE"/>
+                            <constraint firstItem="tje-Lv-4Yd" firstAttribute="leading" secondItem="cWL-1v-Gje" secondAttribute="leading" constant="20" id="gNG-C8-nvM"/>
+                            <constraint firstItem="tje-Lv-4Yd" firstAttribute="centerY" secondItem="cWL-1v-Gje" secondAttribute="centerY" multiplier="0.7" id="odD-Ae-anK"/>
                             <constraint firstItem="sMN-jI-QZr" firstAttribute="centerX" secondItem="cWL-1v-Gje" secondAttribute="centerX" id="vXh-fr-cN0"/>
                         </constraints>
                     </view>
@@ -111,34 +162,13 @@
                                         <rect key="frame" x="0.0" y="122" width="350" height="90"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" minimumValueImage="speaker.fill" catalog="system" maximumValueImage="speaker.wave.3.fill" translatesAutoresizingMaskIntoConstraints="NO" id="g4B-i9-X7Z">
-                                                <rect key="frame" x="-2" y="0.0" width="354" height="36.666666666666664"/>
+                                                <rect key="frame" x="-2" y="0.0" width="354" height="41"/>
                                             </slider>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="Kyf-RD-Q8D">
-                                                <rect key="frame" x="43" y="55.666666666666657" width="264" height="34.333333333333343"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYi-8a-IHq">
-                                                        <rect key="frame" x="0.0" y="0.0" width="53" height="34.333333333333336"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain">
-                                                            <imageReference key="image" image="quote.bubble" catalog="system" symbolScale="large"/>
-                                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage"/>
-                                                        </buttonConfiguration>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7jL-nN-k2t">
-                                                        <rect key="frame" x="108" y="0.0" width="50" height="34.333333333333336"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain">
-                                                            <imageReference key="image" image="airplayaudio" catalog="system" symbolScale="large"/>
-                                                        </buttonConfiguration>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2f7-8Y-Jq1">
-                                                        <rect key="frame" x="213" y="0.0" width="51" height="34.333333333333336"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain">
-                                                            <imageReference key="image" image="list.bullet" catalog="system" symbolScale="large"/>
-                                                        </buttonConfiguration>
-                                                    </button>
-                                                </subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="Kyf-RD-Q8D">
+                                                <rect key="frame" x="149.66666666666666" y="60" width="51" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="5Wf-RX-lqJ"/>
+                                                </constraints>
                                             </stackView>
                                         </subviews>
                                         <constraints>
@@ -165,15 +195,13 @@
                     </view>
                     <size key="freeformSize" width="390" height="257"/>
                     <connections>
+                        <outlet property="advancedFeaturesStackView" destination="Kyf-RD-Q8D" id="cF4-F5-rWF"/>
+                        <outlet property="contentStackView" destination="anq-y9-Bid" id="yNZ-9Q-aTB"/>
                         <outlet property="musicProgressSlider" destination="3WM-GU-W8q" id="DIA-mP-y9h"/>
-                        <outlet property="stackView" destination="anq-y9-Bid" id="yNZ-9Q-aTB"/>
                         <outlet property="volumeSlider" destination="g4B-i9-X7Z" id="ibt-c0-oVj"/>
                         <outletCollection property="playButtons" destination="zZN-27-igB" collectionClass="NSMutableArray" id="LVu-lG-PXO"/>
                         <outletCollection property="playButtons" destination="koE-d1-2p7" collectionClass="NSMutableArray" id="yHu-Iw-i3U"/>
                         <outletCollection property="playButtons" destination="MVn-bO-a6f" collectionClass="NSMutableArray" id="NqI-g9-ky5"/>
-                        <outletCollection property="advancedButtons" destination="WYi-8a-IHq" collectionClass="NSMutableArray" id="p5f-h2-gHS"/>
-                        <outletCollection property="advancedButtons" destination="7jL-nN-k2t" collectionClass="NSMutableArray" id="01U-TR-hHZ"/>
-                        <outletCollection property="advancedButtons" destination="2f7-8Y-Jq1" collectionClass="NSMutableArray" id="Jvh-Kt-ogq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HiM-zZ-xik" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -182,10 +210,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="airplayaudio" catalog="system" width="128" height="123"/>
+        <image name="airplayaudio.circle" catalog="system" width="128" height="123"/>
         <image name="backward.fill" catalog="system" width="128" height="77"/>
         <image name="forward.fill" catalog="system" width="128" height="77"/>
-        <image name="list.bullet" catalog="system" width="128" height="87"/>
         <image name="play.fill" catalog="system" width="117" height="128"/>
         <image name="quote.bubble" catalog="system" width="128" height="110"/>
         <image name="speaker.fill" catalog="system" width="128" height="125"/>
@@ -195,6 +222,15 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
